--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
   <body>
     <!-- Header section -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-container container">
-        <!-- Navigation -->
+        Navigation
         <nav class="header-nav">
           <a class="header-logo logo link" href="./index.html"
             >Web<span class="logo-span">Studio</span></a
@@ -43,7 +43,7 @@
           </ul>
         </nav>
 
-        <!-- Address -->
+        Address
         <address class="header-address">
           <ul class="header-address-list list">
             <li class="address-item">
@@ -59,83 +59,83 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Hero section -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Features section  -->
-      <section class="features">
+      <!-- <section class="features section">
         <div class="container">
-          <!--Скрытый заголовок, используем для ассистивных технологий и индексатор -->
+          Скрытый заголовок, используем для ассистивных технологий и индексатор
           <h2 class="features-title title visually-hidden">Our Features</h2>
-          <ul class="features-list list">
-            <li class="features-item">
+          <ul class="features-list card-set list">
+            <li class="features-item card-set-item">
               <div class="features-thumb">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Strategy</h3>
-              <p class="text">
+              <h3 class="features-subtitle ">Strategy</h3>
+              <p class="features-text ">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="features-item">
+            <li class="features-item card-set-item">
               <div class="features-thumb">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Punctuality</h3>
-              <p class="text">
+              <h3 class="features-subtitle ">Punctuality</h3>
+              <p class="features-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="features-item">
+            <li class="features-item card-set-item">
               <div class="features-thumb">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Diligence</h3>
-              <p class="text">
+              <h3 class="features-subtitle ">Diligence</h3>
+              <p class="features-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="features-item">
+            <li class="features-item card-set-item">
               <div class="features-thumb">
                 <svg class="" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="subtitle">Technologies</h3>
-              <p class="text">
+              <h3 class="features-subtitle ">Technologies</h3>
+              <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
               </p>
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- About section -->
-      <section class="about">
+      <!-- <section class="about">
         <div class="container">
           <h2 class="about-title title">What are we doing</h2>
-          <ul class="about-list list">
-            <li class="about-item">
+          <ul class="about-list card-set list">
+            <li class="about-item card-set-item">
               <img
                 src="./images/about/computer1.jpg"
                 alt="computer"
@@ -143,7 +143,7 @@
                 height="300"
               />
             </li>
-            <li class="about-item">
+            <li class="about-item card-set-item">
               <img
                 src="./images/about/smartphone2.jpg"
                 alt="smartphone"
@@ -151,7 +151,7 @@
                 height="300"
               />
             </li>
-            <li class="about-item">
+            <li class="about-item card-set-item">
               <img
                 src="./images/about/laptop3.jpg"
                 alt="laptop and smartphone"
@@ -161,14 +161,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Employees section -->
-      <section class="employee">
+      <!-- <section class="employee section">
         <div class="container">
           <h2 class="employee-title title">Our Team</h2>
-          <ul class="employee-list list">
-            <li class="employee-item">
+          <ul class="employee-list card-set list">
+            <li class="employee-item card-set-item">
               <img
                 src="./images/employees/employee-1.jpg"
                 alt="man"
@@ -234,7 +234,7 @@
                 </ul>
               </div>
             </li>
-            <li class="employee-item">
+            <li class="employee-item card-set-item">
               <img
                 src="./images/employees/employee-2.jpg"
                 alt="man"
@@ -300,7 +300,7 @@
                 </ul>
               </div>
             </li>
-            <li class="employee-item">
+            <li class="employee-item card-set-item">
               <img
                 src="./images/employees/employee-3.jpg"
                 alt="woman"
@@ -367,7 +367,7 @@
               </div>
             </li>
 
-            <li class="employee-item">
+            <li class="employee-item card-set-item">
               <img
                 src="./images/employees/employee-4.jpg"
                 alt="man"
@@ -435,14 +435,14 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Customers section -->
-      <section class="customers">
+      <!-- <section class="customers section">
         <div class="container">
           <h2 class="customers-title title">Customers</h2>
-          <ul class="customers-social-list list">
-            <li class="customers-social-item">
+          <ul class="customers-social-list card-set list">
+            <li class="customers-social-item card-set-item">
               <a
                 class="customers-social-link"
                 href=""
@@ -455,7 +455,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-social-item">
+            <li class="customers-social-item card-set-item">
               <a
                 class="customers-social-link"
                 href=""
@@ -468,7 +468,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-social-item">
+            <li class="customers-social-item card-set-item">
               <a
                 class="customers-social-link"
                 href=""
@@ -481,7 +481,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-social-item">
+            <li class="customers-social-item card-set-item">
               <a
                 class="customers-social-link"
                 href=""
@@ -494,7 +494,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-social-item">
+            <li class="customers-social-item card-set-item">
               <a
                 class="customers-social-link"
                 href=""
@@ -507,7 +507,7 @@
                 </svg>
               </a>
             </li>
-            <li class="customers-social-item">
+            <li class="customers-social-item card-set-item">
               <a
                 class="customers-social-link"
                 href=""
@@ -522,7 +522,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Footer -->
