--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
 
     <main>
       <!-- Hero section -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Features section  -->
-      <section class="features section">
+      <!-- <section class="features section">
         <div class="container">
-          <!-- Скрытый заголовок, используем для ассистивных технологий и индексатор -->
+          Скрытый заголовок, используем для ассистивных технологий и индексатор
           <h2 class="features-title title visually-hidden">Our Features</h2>
           <ul class="features-list card-set list">
             <li class="features-item card-set-item">
@@ -142,10 +142,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- About section -->
-      <section class="about">
+      <!-- <section class="about">
         <div class="container">
           <h2 class="about-title title">What are we doing</h2>
           <ul class="about-list card-set list">
@@ -175,10 +175,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Employees section -->
-      <section class="employee section">
+      <!-- <section class="employee section">
         <div class="container">
           <h2 class="employee-title title">Our Team</h2>
           <ul class="employee-list card-set list">
@@ -449,10 +449,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- Customers section -->
-      <section class="customers section">
+      <!-- <section class="customers section">
         <div class="container">
           <h2 class="customers-title title">Customers</h2>
           <ul class="customers-social-list card-set list">
@@ -536,11 +536,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-container container">
         <div class="logo-container">
           <a class="logo link" href="./index.html"
@@ -609,7 +609,7 @@
           </ul>
         </div>
 
-        <!-- SUBSCRIBE  -->
+        SUBSCRIBE 
         <div class="subscribe-container">
           <form class="subscribe-form">
             <p class="subscribe-text text" for="subscribe"
@@ -637,7 +637,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- MODAL WINDOW -->
     <div class="backdrop is-hidden" data-modal>
