--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
 
     <main>
       <!-- Hero section -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button btn" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Features section  -->
-      <!-- <section class="features section">
+      <section class="features section">
         <div class="container">
-          Скрытый заголовок, используем для ассистивных технологий и индексатор
+          <!-- Скрытый заголовок, используем для ассистивных технологий и индексатор -->
           <h2 class="features-title title visually-hidden">Our Features</h2>
           <ul class="features-list card-set list">
             <li class="features-item card-set-item">
@@ -142,16 +142,17 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- About section -->
-      <!-- <section class="about">
+      <section class="about">
         <div class="container">
           <h2 class="about-title title">What are we doing</h2>
           <ul class="about-list card-set list">
             <li class="about-item card-set-item">
               <img
-                src="./images/about/computer1.jpg"
+                srcset="./images/about/about_1@1x.jpg 1x, ./images/about/about_1@2x.jpg 2x"
+                src="./images/about/about_1@1x.jpg"
                 alt="computer"
                 width="360"
                 height="300"
@@ -159,7 +160,8 @@
             </li>
             <li class="about-item card-set-item">
               <img
-                src="./images/about/smartphone2.jpg"
+                srcset="./images/about/about_2@1x.jpg 1x, ./images/about/about_2@2x.jpg 2x"
+                src="./images/about/about_2@1x.jpg"
                 alt="smartphone"
                 width="360"
                 height="300"
@@ -167,7 +169,8 @@
             </li>
             <li class="about-item card-set-item">
               <img
-                src="./images/about/laptop3.jpg"
+                srcset="./images/about/about_3@1x.jpg 1x, ./images/about/about_3@2x.jpg 2x"
+                src="./images/about/about_3@1x.jpg"
                 alt="laptop and smartphone"
                 width="360"
                 height="300"
@@ -175,16 +178,17 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Employees section -->
-      <!-- <section class="employee section">
+      <section class="employee section">
         <div class="container">
           <h2 class="employee-title title">Our Team</h2>
           <ul class="employee-list card-set list">
             <li class="employee-item card-set-item">
               <img
-                src="./images/employees/employee-1.jpg"
+              srcset="./images/employees/employee1_@1x.jpg 1x, ./images/employees/employee1_@2x.jpg 2x"
+                src="./images/employees/employee1_@1x.jpg"
                 alt="man"
                 width="264"
                 height="260"
@@ -250,7 +254,9 @@
             </li>
             <li class="employee-item card-set-item">
               <img
-                src="./images/employees/employee-2.jpg"
+              srcset="./images/employees/employee2_@1x.jpg 1x, ./images/employees/employee2_@2x.jpg 2x"
+
+                src="images\employees\employee2_@1x.jpg"
                 alt="man"
                 width="264"
                 height="260"
@@ -316,7 +322,9 @@
             </li>
             <li class="employee-item card-set-item">
               <img
-                src="./images/employees/employee-3.jpg"
+              srcset="./images/employees/employee3_@1x.jpg 1x, ./images/employees/employee3_@2x.jpg 2x"
+
+                src="images\employees\employee3_@1x.jpg"
                 alt="woman"
                 width="264"
                 height="260"
@@ -383,7 +391,9 @@
 
             <li class="employee-item card-set-item">
               <img
-                src="./images/employees/employee-4.jpg"
+              srcset="./images/employees/employee4_@1x.jpg 1x, ./images/employees/employee4_@2x.jpg 2x"
+
+                src="images\employees\employee4_@1x.jpg"
                 alt="man"
                 width="264"
                 height="260"
@@ -449,10 +459,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- Customers section -->
-      <!-- <section class="customers section">
+      <section class="customers section">
         <div class="container">
           <h2 class="customers-title title">Customers</h2>
           <ul class="customers-social-list card-set list">
@@ -536,11 +546,11 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- Footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer-container container">
         <div class="logo-container">
           <a class="logo link" href="./index.html"
@@ -609,7 +619,7 @@
           </ul>
         </div>
 
-        SUBSCRIBE 
+        <!-- SUBSCRIBE  -->
         <div class="subscribe-container">
           <form class="subscribe-form">
             <p class="subscribe-text text" for="subscribe"
@@ -637,7 +647,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- MODAL WINDOW -->
     <div class="backdrop is-hidden" data-modal>
