--- a/portfolio.html
+++ b/portfolio.html
@@ -29,14 +29,23 @@
           <a class="header-logo logo link" href="./index.html"
             >Web<span class="logo-span">Studio</span></a
           >
+
+          <button
+            class="menu-toggle js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg class="toggle-icon" width="32" height="22">
+              <use href="./images/icons.svg#burger-menu"></use>
+            </svg>
+          </button>
+
           <ul class="header-nav-list list">
             <li class="nav-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link link active" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="header-link link active" href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="header-link link" href="./contacts.htm">Contacts</a>
@@ -66,7 +75,7 @@
       <!-- Portfolio section -->
       <section class="portfolio">
         <div class="container">
-          <!--Скрытый заголовок, используем для ассистивных технологий и индексатор -->
+          <!-- Скрытый заголовок, используем для ассистивных технологий и индексатор -->
           <h1 class="portfolio-title title visually-hidden">Our Portfolio</h1>
 
           <ul class="portfolio-button-list list">
@@ -91,8 +100,8 @@
             </li>
           </ul>
 
-          <ul class="portfolio-img-list list">
-            <li class="portfolio-item">
+          <ul class="portfolio-img-list card-set list">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -114,7 +123,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -136,7 +145,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -158,7 +167,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -180,7 +189,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -202,7 +211,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -224,7 +233,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -246,7 +255,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -268,7 +277,7 @@
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
                   <img
@@ -365,7 +374,7 @@
           </ul>
         </div>
 
-        <!-- SUBSCRIBE  -->
+        SUBSCRIBE
         <div class="subscribe-container">
           <form class="subscribe-form">
             <label class="subscribe-label text" for="subscribe"
@@ -391,5 +400,104 @@
         </div>
       </div>
     </footer>
+
+    <!-- MOBILE MENU -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="mobile-close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu list">
+        <li class="mobile-menu-item">
+          <a href="./index.html" class="mobile-menu-link link">Studio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a href="./contacts.htm" class="mobile-menu-link link">Contacts</a>
+        </li>
+      </ul>
+
+      <ul class="contacts-menu list">
+        <li class="contacts-item">
+          <a class="contacts-link link" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+
+        <li class="contacts-item">
+          <a class="mail-link link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+
+      <ul class="mobile-social-list list">
+        <li class="mobile-social-item">
+          <a
+            class="mobile-social-link"
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Instagram icon"
+          >
+            <svg class="mobile-social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-item">
+          <a
+            class="mobile-social-link"
+            href="https://twitter.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Twitter icon"
+          >
+            <svg class="mobile-social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-item">
+          <a
+            class="mobile-social-link"
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Facebook icon"
+          >
+            <svg class="mobile-social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-social-item">
+          <a
+            class="mobile-social-link"
+            href="https://www.linkedin.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Linkedin icon"
+          >
+            <svg class="mobile-social-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <!-- MOBILE MENU SCRIPTS -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
