delete comment portfolio-img-list

--- a/portfolio.html
+++ b/portfolio.html
@@ -374,11 +374,16 @@
           </ul>
         </div>
 
-        SUBSCRIBE
+        <!-- SUBSCRIBE  -->
         <div class="subscribe-container">
           <form class="subscribe-form">
-            <label class="subscribe-label text" for="subscribe"
-              >Subscribe</label
+            <p class="subscribe-text text" for="subscribe">Subscribe</p>
+
+            <label
+              class="subscribe-label text visually-hidden"
+              for="subscribe"
+              aria-label="E-mail"
+              >E-mail</label
             >
 
             <div class="subscribe-wrapper">
