--- a/portfolio.html
+++ b/portfolio.html
@@ -22,9 +22,9 @@
   </head>
   <body>
     <!-- Header section -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-container container">
-        <!-- Navigation -->
+        Navigation
         <nav class="header-nav">
           <a class="header-logo logo link" href="./index.html"
             >Web<span class="logo-span">Studio</span></a
@@ -53,7 +53,7 @@
           </ul>
         </nav>
 
-        <!-- Address -->
+        Address
         <address class="header-address">
           <ul class="header-address-list list">
             <li class="address-item">
@@ -69,7 +69,7 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- Portfolio section -->
@@ -78,7 +78,7 @@
           <!-- Скрытый заголовок, используем для ассистивных технологий и индексатор -->
           <h1 class="portfolio-title title visually-hidden">Our Portfolio</h1>
 
-          <ul class="portfolio-button-list list">
+          <!-- <ul class="portfolio-button-list list">
             <li>
               <button class="portfolio-button btn" type="button">All</button>
             </li>
@@ -98,7 +98,7 @@
                 Marketing
               </button>
             </li>
-          </ul>
+          </ul> -->
 
           <ul class="portfolio-img-list card-set list">
             <li class="portfolio-item card-set-item">
@@ -305,7 +305,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-container container">
         <div class="logo-container">
           <a class="logo link" href="./index.html"
@@ -374,7 +374,7 @@
           </ul>
         </div>
 
-        <!-- SUBSCRIBE  -->
+        SUBSCRIBE 
         <div class="subscribe-container">
           <form class="subscribe-form">
             <p class="subscribe-text text" for="subscribe">Subscribe</p>
@@ -404,7 +404,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- MOBILE MENU -->
     <div class="menu-container js-menu-container" id="mobile-menu">
