--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- Header section -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="header-container container">
         Navigation
         <nav class="header-nav">
@@ -42,10 +42,12 @@
 
           <ul class="header-nav-list list">
             <li class="nav-item">
-              <a class="header-link link active" href="./index.html">Studio</a>
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link link active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item">
               <a class="header-link link" href="./contacts.htm">Contacts</a>
@@ -53,7 +55,7 @@
           </ul>
         </nav>
 
-        Address
+        <!-- Address -->
         <address class="header-address">
           <ul class="header-address-list list">
             <li class="address-item">
@@ -69,7 +71,7 @@
           </ul>
         </address>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- Portfolio section -->
@@ -419,7 +421,9 @@
           <a href="./index.html" class="mobile-menu-link link">Studio</a>
         </li>
         <li class="mobile-menu-item">
-          <a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a>
+          <a href="./portfolio.html" class="mobile-menu-link active link"
+            >Portfolio</a
+          >
         </li>
         <li class="mobile-menu-item">
           <a href="./contacts.htm" class="mobile-menu-link link">Contacts</a>
