--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 
       <ul class="mobile-menu list">
         <li class="mobile-menu-item">
-          <a href="./index.html" class="mobile-menu-link link">Studio</a>
+          <a href="./index.html" class="mobile-menu-link active link">Studio</a>
         </li>
         <li class="mobile-menu-item">
           <a href="./portfolio.html" class="mobile-menu-link link">Portfolio</a>
