--- a/portfolio.html
+++ b/portfolio.html
@@ -185,8 +185,8 @@
             <li class="portfolio-item card-set-item">
               <a class="portfolio-link link" href="">
                 <div class="portfolio-thumb">
-                  <picture>
-                    <!-- Desktop -->
+                  <!-- <picture>
+                    Desktop
                     <source
                       media="(min-width: 1158px)"
                       srcset="
@@ -203,7 +203,7 @@
                       "
                       type="image/jpg"
                     />
-                    <!-- Tablet -->
+                    Tablet
                     <source
                       media="(min-width: 768px)"
                       srcset="
@@ -221,7 +221,7 @@
                       type="image/jpg"
                     />
 
-                    <!-- Mobile -->
+                    Mobile
 
                     <source
                       media="(max-width: 767px)"
@@ -242,12 +242,30 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob2@1x.jpg"
-                      alt="Banking app interface"
+                      alt="mobile cashless payment"
                       width="396"
                       height="280"
                       loading="lazy"
                     />
-                  </picture>
+                  </picture> -->
+
+                  <img
+                    class="portfolio-img"
+                    srcset="
+                      ./images/portfolio/port-2tab356.webp  356w,
+                      ./images/portfolio/port-2desk360.webp 360w,
+                      ./images/portfolio/port-2mob396.webp  396w,
+                      ./images/portfolio/port-2tab712.webp  712w,
+                      ./images/portfolio/port-2desk720.webp 720w,
+                      ./images/portfolio/port-2mob792.webp  792w
+                    "
+                    sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 428px) 396px, 100vw"
+                    src="./images/portfolio/port-2mob396.webp"
+                    alt="mobile cashless payment"
+                    width="396"
+                    height="280"
+                    loading="lazy"
+                  />
 
                   <p class="overlay-text text">
                     14 Stylish and User-Friendly App Design Concepts · Task
@@ -321,7 +339,7 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob3@1x.jpg"
-                      alt="Banking app interface"
+                      alt="notebook and mobilephone with the same app on the screens"
                       width="396"
                       height="280"
                       loading="lazy"
@@ -400,7 +418,7 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob4@1x.jpg"
-                      alt="Banking app interface"
+                      alt="vehicle interior with hands on the wheel"
                       width="396"
                       height="280"
                       loading="lazy"
@@ -479,7 +497,7 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob5@1x.jpg"
-                      alt="Banking app interface"
+                      alt="mobile phone with screen ilustrations"
                       width="396"
                       height="280"
                       loading="lazy"
@@ -558,7 +576,7 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob6@1x.jpg"
-                      alt="Banking app interface"
+                      alt="Smiling girl with headphones and mobile phone"
                       width="396"
                       height="280"
                       loading="lazy"
@@ -637,7 +655,7 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob7@1x.jpg"
-                      alt="Banking app interface"
+                      alt="Screen illustration"
                       width="396"
                       height="280"
                       loading="lazy"
@@ -716,7 +734,7 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob8@1x.jpg"
-                      alt="Banking app interface"
+                      alt="woman with a bag full of vegetables"
                       width="396"
                       height="280"
                       loading="lazy"
@@ -795,7 +813,7 @@
                     <img
                       class="portfolio-img"
                       src="./images/portfolio/port-mob9@1x.jpg"
-                      alt="Banking app interface"
+                      alt="man's hand holding a mug which he pours coffee in"
                       width="396"
                       height="280"
                       loading="lazy"
